Further navigation/allocation ability
Implemented dynamic display of week in weekView according to what
weekNum is passed in by monthlyView, and implemented dynamic allocation
of days according to weekNum passed in by weekView. Each day is also
clickable and saveable/retrievable from local storage.

--- a/src/html/dayView.html
+++ b/src/html/dayView.html
@@ -13,7 +13,7 @@
 <br>
 <br>
 
-<textarea id="user" value="what" rows="20" cols="50" placeholder='What do you need to do?'>
+<textarea id="user" rows="20" cols="50" placeholder='What do you need to do?'>
 </textarea>
 
 <br />
@@ -26,12 +26,9 @@
     //save entered gmail address
     document.getElementById("save").addEventListener("click", function ()
     {
-        var date = "yolo";
         var event = document.getElementById("user").value ;
-
-        //localStorage["user"] = user ;
         localStorage.setItem("event", date);
-        alert("saved") ;
+        alert("saved");
 
     } , false);
 
@@ -40,7 +37,6 @@
         var event = localStorage["month"];
         //document.getElementById("user").value = user ;
         alert(event);
-        console.log(user);
     } , false);
 
 </script>
