--- a/src/html/yearView.html
+++ b/src/html/yearView.html
@@ -20,6 +20,7 @@
     <div class="calendar-body">
 
         <div class="row months">
+            <div id = "a" class="col-lg-1">  <a href="monthlyView.html">  <p>August</p></a></div>
             <script>
                 document.getElementById("a").addEventListener("click", function ()
                 {
