--- a/src/html/monthlyView.html
+++ b/src/html/monthlyView.html
@@ -1,25 +1,3 @@
-<style type="text/css">
-    table {
-        border-collapse: collapse;
-        width: 100%;
-    }
-
-    td {
-        padding: 8px;
-        text-align: center;
-    }
-
-    th {
-        padding: 8px;
-        text-align: center;
-    }
-
-    .days:hover {
-        background-color: #696969
-    }
-
-</style>
-
 <!doctype html>
 
 <html class="no-js" lang="">
@@ -57,124 +35,172 @@
     <!--http://stackoverflow.com/questions/20407781/dynamically-generated-table-using-an-array-to-fill-in-td-values-->
 </div>
 
-<script type="text/javascript">
-
-    function openWeek(id) {
-        alert(id);
-    }
-
-</script>
-
 <script>
+
+//    function changeTest()
+//    {
+//        var x = document.getElementByID("testTD1_1")
+//        x.innerText = "woo"
+//    }
+
+
     function openWeek(id) {
         var weekNum = id;
         localStorage.setItem("weekNum", weekNum);
         window.location.href = "weekView.html";
     }
+
+    function changeMonth(i) {
+        var newMonth = i;
+        var myString = i;
+        if(newMonth < 1) {
+            newMonth = 12;
+        }
+        if(newMonth > 12) {
+            newMonth = 1;
+        }
+        myString = "Old Month: " + myString + ", New Month: " + newMonth
+        alert(myString)
+
+        localStorage.setItem("month", i);
+        window.location.href = "monthlyView.html";
+    }
+
     function setMonth(){
         var month = localStorage["month"] ;
-        if(month == 8)
+        if(month==8)
         {
             addTable(1, 31)
         }
-        else if(month == 9)
+        else if(month==9)
         {
             addTable(4, 30)
         }
-        else if(month == 10)
+        else if(month==10)
         {
             addTable(6, 31)
         }
-        else if(month == 11)
+        else if(month==11)
         {
             addTable(2, 30)
         }
-        else if(month == 12)
+        else if(month==12)
         {
             addTable(4, 31)
         }
-        else if(month == 1)
+        else if(month==1)
         {
             addTable(0, 31)
         }
-        else if(month == 2)
+        else if(month==2)
         {
             addTable(3, 28)
         }
-        else if(month == 3)
+        else if(month==3)
         {
             addTable(3, 31)
         }
-        else if(month == 4)
+        else if(month==4)
         {
             addTable(6, 30)
         }
-        else if(month == 5)
+        else if(month==5)
         {
             addTable(1, 31)
         }
-        else if(month == 6)
+        else if(month==6)
         {
             addTable(4, 30)
         }
-        else if(month == 7)
+        else if(month==7)
         {
             addTable(6, 31)
         }
     }
 
+//    function setCurrentMonth(month)
+//    {
+//        month = month - 1
+//        if(month < 1)
+//            month = 12
+//        if(month > 12)
+//            month = 1
+//        localStorage.setItem("month", month);
+//        setMonth()
+//    }
+
+    //from:
+    //stackoverflow.com/questions/4777077/removing-elements-by-class-name
+    function removeElementsByClass(classname)
+    {
+        var elements = document.getElementsByClassName(className)
+        var len = elements.length
+        for(var i = len - 1; i > 0; i--){
+            elements[i].parentNode.removeChild(elements[i])
+        }
+//        while(elements.length > 0) {
+//            elements[0].parentNode.removeChild(elements[0])
+//        }
+    }
+
+    function intToMonth(j)
+    {
+        var x = ""
+        if (j == 1 || j == 13) {
+            x = "January"
+        }
+        else if(j == 2) {
+            x = "February"
+        }
+        else if(j == 3) {
+            x = "March"
+        }
+        else if(j == 4) {
+            x = "April"
+        }
+        else if(j == 5) {
+            x = "May"
+        }
+        else if(j == 6) {
+            x = "June"
+        }
+        else if(j == 7) {
+            x = "July"
+        }
+        else if(j == 8) {
+            x = "August"
+        }
+        else if(j == 9) {
+            x = "September"
+        }
+        else if(j == 10) {
+            x = "October"
+        }
+        else if(j == 11) {
+            x = "November"
+        }
+        else if(j == 12 || j == 0) {
+            x = "December"
+        }
+        return x
+    }
+
     function addTable(f, l) {
         var month = localStorage["month"]
         var monthName = intToMonth(month)
-        function intToMonth(month)
-        {
-            var x = ""
-            if (month == 1 || month == 13) {
-                x = "January"
-            }
-            else if(month == 2) {
-                x = "February"
-            }
-            else if(month == 3) {
-                x = "March"
-            }
-            else if(month == 4) {
-                x = "April"
-            }
-            else if(month == 5) {
-                x = "May"
-            }
-            else if(month == 6) {
-                x = "June"
-            }
-            else if(month == 7) {
-                x = "July"
-            }
-            else if(month == 8) {
-            x = "August"
-        }
-        else if(month == 9) {
-            x = "September"
-        }
-        else if(month == 10) {
-            x = "October"
-        }
-        else if(month == 11) {
-            x = "November"
-        }
-        else if(month == 12 || month == 0) {
-            x = "December"
-        }
-            return x
-        }
+
+
         var name = document.createElement("H")
         var text = document.createTextNode(monthName)
         name.appendChild(text)
 
-
-
         var myTableDiv = document.getElementById("metric_results")
         var table = document.createElement('TABLE')
+
+        if(document.getElementsByClassName("monthTable").length > 0) {
+            removeElementsByClass("monthTable")
+        }
+        table.setAttribute("class", "monthTable")
         var tableBody = document.createElement('TBODY')
 
         table.border = '0'
@@ -238,6 +264,7 @@
 
             for (j = 0; j < cal[i].length; j++) {
                 var td = document.createElement('TD')
+//                td.setAttribute("ID", "testTD" + j "_" + i)
                 td.appendChild(document.createTextNode(cal[i][j]));
                 tr.appendChild(td)
             }
@@ -245,6 +272,20 @@
         }
         myTableDiv.appendChild(name)
         myTableDiv.appendChild(table)
+
+        var previous = document.createElement('BUTTON')
+        var next = document.createElement('BUTTON')
+        previous.setAttribute('onclick', "changeMonth(" + (month - 1) + ")")
+        next.setAttribute('onclick', "changeMonth(" + (month - -1) + ")")
+        //previous.setAttribute('onclick', "changeTest()")
+            //"setCurrentMonth(" + month + ");window.location.href='monthlyView.html'")
+        //previous.setAttribute('onclick', 'history.go(0)')
+        var text = document.createTextNode("Previous Month")
+        previous.appendChild(text)
+        text = document.createTextNode("Next Month")
+        next.appendChild(text)
+        myTableDiv.appendChild(previous)
+        myTableDiv.appendChild(next)
     }
 
 
@@ -252,8 +293,6 @@
 
 </script>
 
-
-<button></button>
 
 </body>
 </html>
