--- a/src/html/yearView.html
+++ b/src/html/yearView.html
@@ -99,6 +99,7 @@
             font-size: 80px;
             padding: 16px;
             text-align: center;
+            text-shadow: 0 0 5px #fdfffd;
         }
 
         @keyframes slide-left {
